Update Public Key To Chef Server User
