# api/external/infra_proxy/infra_proxy.swagger.json
@@ -2735,8 +2735,8 @@
         ]
       }
     },
-    "/api/v0/infra/servers/{server_id}/user/{user_name}/user": {
-      "post": {
+    "/api/v0/infra/servers/{server_id}/user/{user_name}": {
+      "put": {
         "operationId": "InfraProxy_ResetInfraServerUserKey",
         "responses": {
           "200": {
@@ -4620,6 +4620,9 @@
           "type": "string"
         },
         "user_name": {
+          "type": "string"
+        },
+        "server_id": {
           "type": "string"
         },
         "private_key": {
