# components/automate-gateway/api/infra_proxy.pb.swagger.go
@@ -2738,8 +2738,8 @@ func init() {
         ]
       }
     },
-    "/api/v0/infra/servers/{server_id}/user/{user_name}/user": {
-      "post": {
+    "/api/v0/infra/servers/{server_id}/user/{user_name}": {
+      "put": {
         "operationId": "InfraProxy_ResetInfraServerUserKey",
         "responses": {
           "200": {
@@ -4623,6 +4623,9 @@ func init() {
           "type": "string"
         },
         "user_name": {
+          "type": "string"
+        },
+        "server_id": {
           "type": "string"
         },
         "private_key": {
